# gnn-quant-qlib

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: optuna_tuning.md
examples/: workflow_config_gcn_Alpha360.yaml
qlib_gcn_model/: __init__.py  qlib_gcn_model.py
scripts/: tune_optuna.py
tests/: test_qlib_gcn_model.py
